After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 674286 - "Delete confirmation" dialog has wrong padding
"Delete confirmation" dialog has wrong padding
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
3.4.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2012-04-17 20:35 UTC by Robert Roth
Modified: 2012-04-18 18:45 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Robert Roth 2012-04-17 20:35:44 UTC
Forwarded from: https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/981375

The delete confirmation dialog primary description is incorrectly padded, there is a huge whitespace between the icon and the primary description. See https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/981375/+attachment/3063429/+files/delete.png

It doesn't happen with any filename. It happens with names like synaptic_backtrace.png, xbmc_crashlog-20120326_213822.log, etc., but doesn't happen with test. Looks to me like word wrapping is on an the wrapped primary text is centeered horizontally.
Comment 1 Cosimo Cecchi 2012-04-18 18:44:45 UTC
-> gtk+

This is a regression in GtkMessageDialog.
Comment 2 Cosimo Cecchi 2012-04-18 18:45:24 UTC
Pushed a fix for this to git master and gtk-3-4 branches