messagedialog: also set GtkMisc alignment to zero for dialog labels

Setting xalign to START is not enough to make them left-aligned in every
case. This fixes a regression introduced in commit
cc0be1f949020de1562534fbc31ddf0af4651fe2

https://bugzilla.gnome.org/show_bug.cgi?id=674286